# jelly_rs

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs
.github/: dependabot.yml
.github/workflows/: rust.yml
jelly-js/: Cargo.toml  README.md
jelly-js/demo/: index.html  index.js  package-lock.json  package.json  style.css  webpack.config.js
jelly-js/src/: lib.rs  reader.rs
src/: deserialize.rs  error.rs  lib.rs  lookup.rs  main.rs  proto.rs
src/to_rdf/: mod.rs  sophia.rs  strings.rs
tests/: conformance.rs
