[package]
name = "jelly"
version = "0.1.0"
edition = "2024"

[dependencies]
prost = "0.14.1"
prost-types = "0.14.1"

env_logger = "0.10"
log = "0.4"
sophia_term = { version = "0.9.0", optional = true}
sophia_api = { version = "0.9.0", optional = true}
sophia_iri = { version = "0.9.0", optional = true}
thiserror = "2"
paste = "1.0.15"

[dev-dependencies]
sophia_turtle = "0.9.0"

[build-dependencies]
prost-build = "0.14.1"
sophia_term = "0.9.0"
sophia_api = "0.9.0"
sophia_iri = "0.9.0"
sophia_turtle = "0.9.0"
sophia_inmem = "0.9.0"

[features]
default = ["sophia"]
sophia = ["sophia_term", "sophia_api", "sophia_iri"]


